--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "firebase": "^8.2.1",
-    "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-firebase-hooks": "^5.0.3",
-    "react-hot-toast": "^2.2.0"
+    "lodash.debounce": "^4.0.8",
+    "lodash.kebabcase": "^4.1.1",
+    "next": "10.0.4",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-firebase-hooks": "^2.2.0",
+    "react-hook-form": "^6.14.2",
+    "react-hot-toast": "^1.0.2",
+    "react-markdown": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.26",
