--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "components/PostFeed.tsx"  ],
   "exclude": [
     "node_modules"
   ]
